# template-hygeos

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.__root_folder}}/: .gitignore  README.md  pyproject.toml  pytest.ini
{{cookiecutter.project_name}}/: .gitignore  LICENCE.txt  README.md  pyproject.toml
