[project]
name = "{{cookiecutter.package_name}}"
requires-python = ">= {{cookiecutter.python_version_number}}"
version = "0.1.0"
authors = ["{{cookiecutter.author_name}}"]

[build-system]
# Use poetry as the build system.
# The default "hatchling" used as a default by pixi does not work with "core"
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
{{cookiecutter.package_name}} = { path = ".", editable = true }

[tool.pixi.dependencies]
pytest = ">=8.3.5,<9"
pytest-html = ">=4.1.1,<5"
matplotlib-base = ">=3.10.1,<4"
numpy = "<2"
pytest-xdist = ">=3.6.1,<4"

[tool.pixi.tasks]
{% if cookiecutter.tests %}tests = "pytest tests/"{% endif %}