[project]
name = "{{cookiecutter.__package_name}}"
requires-python = ">= {{cookiecutter.python_version_number}}"
version = "0.1.0"
authors = [{name = "HYGEOS", email = "contact@hygeos.com"}]
dependencies = []

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["{{cookiecutter.__package_name}}"]  # only install this folder

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
{{cookiecutter.__package_name}} = { path = ".", editable = true }

[tool.pixi.environments]
default = { features = ['sys', 'sub', 'dev'], solve-group = "default" }

[tool.pixi.tasks]
{% if cookiecutter.__tests %}tests = "pytest tests/"{% endif %}


[tool.pixi.dependencies]
pytest = "*"
pytest-html = "*"
matplotlib-base = "*"
pytest-xdist = "*"


[tool.pixi.feature.sys.dependencies]

[tool.pixi.feature.dev.dependencies]

[tool.pixi.feature.sub.dependencies]
